# python-serverless-webapp-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{ cookiecutter.service_name }}/: .gitignore  .pre-commit-config.yaml  README.md  local_server.py  package.json  pyproject.toml  serverless.yml
{{ cookiecutter.service_name }}/.github/workflows/: ci.yml
{{ cookiecutter.service_name }}/doc/: openapi.yml
{{ cookiecutter.service_name }}/test/: conftest.py  test_controllers.py  utils.py
{{ cookiecutter.service_name }}/{{ cookiecutter.package_name }}/: __init__.py  logger.py
{{ cookiecutter.service_name }}/{{ cookiecutter.package_name }}/controllers/: controllers.py
